Fix bug to show the wedding banner photo on mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -1799,7 +1799,7 @@ $baseurl: '{{ site.baseurl }}/images';
 /* Landing */
 
 	body.landing {
-		#page-wrapper, #page-wrapper-wedding {
+		#page-wrapper {
 			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/banner.jpg")'));
 			background-attachment: fixed;
 			background-position: center center;
@@ -1808,13 +1808,14 @@ $baseurl: '{{ site.baseurl }}/images';
 			padding-top: 0;
 		}
 
-		#page-wrapper-wedding {
-			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/wedding/campfire.jpg")'));
-
-		}
-
 		#footer {
 			background-color: darken(transparentize(_palette(bg), 0.1), 8);
+		}
+	}
+
+	body.landing.wedding {
+		#page-wrapper {
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/wedding/campfire.jpg")'));
 		}
 	}
 
@@ -1835,5 +1836,12 @@ $baseurl: '{{ site.baseurl }}/images';
 			#footer {
 				background-color: darken(_palette(bg), 8);
 			}
+		}
+	}
+
+	body.is-mobile.wedding {
+		#banner,
+		.wrapper.style4 {
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/wedding/campfire.jpg")'));
 		}
 	}
